# flight

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
engine/: CMakeLists.txt
engine/include/: engine.h  plugin_manager.h
engine/src/: engine.c  plugin_manager.c  static_manifest.c
extensions/: CMakeLists.txt
extensions/test/: CMakeLists.txt  test_extension.c
game/: CMakeLists.txt
game/include/: game.h  game_context.h  game_state.h
game/src/: game.c
platform/: CMakeLists.txt
platform/include/: platform.h  platform_memory.h  platform_renderer.h  platform_window.h
platform/src/: arena.c  platform_memory_unix.c  platform_memory_wasm.c  platform_memory_win32.c  platform_plugin_unix.c  platform_plugin_win32.c  vector2.c
platform/src/sdl/: main_sdl.c  platform_renderer_sdl.c  platform_sdl.c  platform_sdl_internal.h  platform_window_sdl.c
shared/: CMakeLists.txt
shared/include/: arena.h  arena_types.h  engine.h  engine_api.h  engine_api_enums.h  engine_api_types.h  extension.h  game_state.h  platform.h  platform_api.h  platform_api_enums.h  platform_api_types.h  platform_plugin.h  platform_renderer.h  platform_window.h  plugin_api.h  plugin_macros.h  test_extension_api.h  vector2.h
tools/: CMakeLists.txt  api_gen.c  macro_gen.c
